# FlatPilot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  issues.jsonl  kkbes8ofolpk21r6ttthajiiqvcjuvpk  manifest  pyproject.toml
.beads/: config.yaml  issues.jsonl  metadata.json
.claude/: settings.json
.github/workflows/: ci.yml
docs/adr/: 0001-web-ui-architecture.md
scripts/: kleinanzeigen_probe.py  wg_probe.py
src/flatpilot/: __init__.py  __main__.py  anschreiben.example.md  applications.py  apply.py  cli.py  (+18 more)
tests/: conftest.py  test_applications.py  test_apply_cli.py  test_apply_lock.py  test_apply_orchestrator.py  test_apply_timeout_config.py  test_apply_to_flat_method.py  test_auto_apply_drain.py  test_auto_apply_gates.py  test_auto_apply_settings.py  test_auto_apply_status_panel.py  test_backoff.py  test_block_detect.py  test_conftest_smoke.py  test_dedup.py  test_dispatcher_resolve_channels.py  test_dispatcher_signatures.py  test_doctor.py  test_doctor_auto_apply.py  test_doctor_saved_search_notifications.py  test_email_adapter.py  test_errors.py  test_filler_kleinanzeigen.py  test_filler_registry.py  test_filler_submit.py  test_immoscout24_rss_scraper.py  test_inberlinwohnen_scraper.py  test_kleinanzeigen_scraper.py  test_login_recipes.py  test_matcher_distance.py  test_matcher_filters.py  test_matcher_saved_searches.py  test_notifications_dispatcher.py  test_overlay_profile.py  test_pause_resume_cli.py  test_pipeline_backoff.py  test_pipeline_city_gating.py  test_pipeline_known_ids.py  test_reclassify.py  test_registry_city_gating.py  (+14 more)
(+54 files in other folders)
